force-app/main/default/objects/Contact/fields/Contact_Image__c.field-meta.xml
<CustomField>
    <fullName>Contact_Image__c</fullName>
    <label>Contact Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>