force-app/main/default/objects/Contact/fields/HubSpot_Id__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Id__c</fullName>
    <label>HubSpot Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>