force-app/main/default/objects/Contact/fields/Is_Current_Permanent_Adress_Same__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_Permanent_Adress_Same__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Current &amp; Permanent Adress Same?</label>
    <type>Checkbox</type>
</CustomField>