force-app/main/default/objects/Contact/fields/Real_Estate_Property__c.field-meta.xml
<CustomField>
    <fullName>Real_Estate_Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Real Estate Property</label>
    <referenceTo>Real_Estate_Property__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>